  New configs:
    [xvu] notify.charge.start.delay       -- in seconds, default 24
- VW e-Up/OBD: polling control for diagnostic/adaptation sessions
  New command:
    xvu polling <status|pause|continue>   -- temporarily pause OBD2 polling
- VW e-Up: added SOC monitoring log
  New configs:
    [xvu] log.socmon.storetime            -- days, 0=off
- New vehicle: Hyundai Ioniq vFL (HIONVFL)
  https://docs.openvehicles.com/en/latest/components/vehicle_hyundai_ioniqvfl/docs/index.html
- Webserver: support TLS (https, wss) using self-signed certificates
- New vehicle: Jaguar Ipace (JLRI)
- New commands:
    echo [<text>] […] -- output text
    sleep <seconds> -- pause script execution
- Scripting API: added OvmsVehicle.ObdRequest()
- Vehicle: provide momentary ideal range gain/loss speed as a metric,
    add charge speed to "stat" output, output "stat" charge ETRs in hh:mm format
  New metric:
    v.b.range.speed                -- Momentary ideal range gain/loss (charge/discharge) speed [kph]

2021-03-05 MB  3.2.016  OTA release
- VW e-Up: CCS (DC) charge detection & data
  New metrics:
    xvu.c.ccs.u             -- CCS charger supplied voltage [V]
    xvu.c.ccs.i             -- CCS Charger supplied current [A]
    xvu.c.ccs.p             -- CCS Charger supplied power [kW]
- VW e-Up: replaced MFD range based CAC/SOH by charge coulomb count based
  Removed metrics:
    xvu.b.cap.range
    xvu.b.cap.chg.ah.norm
    xvu.b.cap.chg.ah.norm
    xvu.b.cap.chg.kwh.norm
    xvu.b.cap.chg.kwh.abs
  New metrics:
    xvu.b.energy.range      -- MFD range estimation energy [kWh]
    xvu.b.cap.kwh.range     -- … usable battery capacity derived [kWh]
    xvu.b.cap.ah.abs        -- Charge coulomb based capacity [Ah]
    xvu.b.cap.ah.norm       -- … normalized (usable) [Ah]
    xvu.b.cap.kwh.abs       -- Charge energy based capacity [kWh]
    xvu.b.cap.kwh.norm      -- … normalized (usable) [kWh]
- Volt/Ampera: new xva metrics:
    xva.v.p.trip.ev   = trip using electric, km;